[package]
name = "knitting_parse"
version = "0.3.0"
authors = ["James Mahler <james.mahler@gmail.com>"]
edition = "2021"
description = "A knitting parser library based on nom."
readme = "README.md"
homepage = "https://github.com/jamesmahler/knitting_parser"
license-file = "LICENSE"
keywords = ["knitting", "knit"]

[dependencies]
nom = "6.2.1"
